# nime24-code

./: README.md  pyproject.toml
cfg/: onset_mapping.yaml  onset_mapping_808.yaml  onset_mapping_808_linear.yaml  onset_mapping_808_lrg.yaml
cfg/archive/: drumsynth.yaml  timbre_interval.yaml
cfg/archive/carson/: 01_snare1_pop_no_damp.yaml  02_snare1_pop_damp.yaml  03_snare1_supra_no_damp.yaml  04_snare1_supra_damp.yaml  05_snare2_pop_no_damp.yaml  06_snare2_pop_damp.yaml  07_snare2_supra_no_damp.yaml  08_snare2_supra_damp.yaml  09_snare3_pop_no_damp.yaml  10_snare3_pop_damp.yaml  11_snare3_supra_no_damp.yaml  12_snare3_supra_damp.yaml
cfg/data/: carson_pop_damp.yaml  carson_pop_no_damp.yaml  carson_supra_damp.yaml  carson_supra_no_damp.yaml  snare_onset.yaml
cfg/features/: onset_feature_full.yaml  onset_features.yaml
cfg/models/: linear_mapper.yaml  mlp_mapper.yaml  mlp_mapper_lrg.yaml
cfg/presets/: drum_1.json
cfg/synths/: simple_drum_synth.yaml  snare_808.yaml
scripts/: direct_optimize.sh  test_all_feb2.sh  train_linear_feb2.sh  train_mlp_feb2.sh  train_mlp_lrg_feb2.sh  train_mlp_lrg_feb2_alt.sh
scripts/archive/: train_carson_calg.sh  train_carson_calg_2.sh  train_linear_feb1_cars.sh  train_linear_jan30.sh  train_mlp_feb1_cars.sh  train_mlp_jan30.sh  train_mlp_lrg_jan30.sh
test/: test_data.py  test_feature.py  test_model.py  test_np_core.py  test_synth.py  test_tasks.py
torchdrum/: callback.py  cli.py  data.py  model.py  tasks.py
torchdrum/utils/: model.py
