[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["torchdrum"]

[project]
name = "torchdrum"
version = "0.0.1"
dependencies = [
    "einops",
    "jsonargparse[signatures]>=4.18.0",
    "lightning",
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "pyloudnorm",
    "scipy",
    "torch",
    "torchaudio",
]

[project.scripts]
torchdrum = "torchdrum.cli:main"
torchdrum-test = "torchdrum.cli:test_version"
torchdrum-train-sdss = "torchdrum.cli:train_sdss"
torchdrum-train-cars = "torchdrum.cli:train_carson"
torchdrum-optuna = "torchdrum.optuna:run_optuna"
torchdrum-direct = "torchdrum.cli:direct_optimization"
torchdrum-optimize-sdss = "torchdrum.cli:optimize_sdss"

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "flake8",
    "pytest",
    "pytest-mock",
    "pre-commit",
    "pytest-cov",
    "matplotlib",
    "nbstripout",
    "nbmake",
    "ipywidgets",
    "optuna",
]
